--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <img src="profile.jpg" alt="Your Photo">
+            <img src="profile.jpg" alt="Photo">
             <h1>Aditi Gupta</h1>
             <p>Email: gupta.aditi35117@gmail.com</p>
+            <p><a href="https://github.com/aditi35117/resume/blob/main/index.html" >Github</a></p>
         </div>
         <div class="content">
             <div class="section">
